# Waymac-Launcher

./: '  .gitignore  Cargo.toml  README.md  TODO.md  ]  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 27xzsm85bd9mn5jcfankm64z6arm5842-source
data/: config-template-with-gradient.toml  config-template.toml
docs/: config_file.md
src/: data.rs  lib.rs  logger.rs  main.rs  util.rs
src/app_launcher/: mod.rs  utils.rs
src/common/: mod.rs  util.rs
src/config/: app.rs  mod.rs  toml.rs  util.rs
src/data/: mod.rs
src/display_servers/: mod.rs  quartz.rs  wayland.rs  xorg.rs
src/display_servers/wayland/: mod.rs
src/display_servers/xorg/: mod.rs
