[package]
name = "waymac_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["advanced"] }
log = "0.4.29"
ftail = "0.3.1"
clap = "4.6.0"


[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop.git" }
xdg = "3.0.0"
