[package]
name = "waymac_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["advanced", "tokio"] }
log = "0.4.29"
ftail = "0.3.1"
clap = "4.6.0"
walkdir = "2.5.0"


[target.'cfg(target_os = "macos")'.dependencies]
apple-bundles = "0.21.0"


[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop.git" }
freedesktop-file-parser = "0.3.1"
xdg = "3.0.0"
