[package]
name = "waymac_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["advanced", "tokio"] }
log = "0.4.29"
ftail = "0.3.1"
clap = { version = "4.6.0", features = ["derive"] }
walkdir = "2.5.0"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.2"


[target.'cfg(target_os = "macos")'.dependencies]
apple-bundles = "0.21.0"
core-graphics = "0.25.0"


[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { git = "https://github.com/waycrate/exwlshelleventloop.git" }
freedesktop-file-parser = "0.3.1"
xdg = "3.0.0"
